Remove ImmutableMap instances from public-facing API